# pyproject-pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.sh
.github/workflows/: dispatch.yml  pypi.yml  test.yml
src/pyproject_pre_commit/: __init__.py  pyproject_pre_commit.py
tests/: test_pyproject_pre_commit.py  test_version.py
